<resources>
    <string name="app_name">Fatless</string>
    <string name="facebook_app_id">238466676604458</string>
    <string name="title_activity_login">Sign in</string>
    <string name="fb_login_protocol_scheme">fb238466676604458</string>

    <!-- Timer -->
    <string name="hint_minute">Minute</string>
    <string name="message_minutes">Please Enter Minutes…</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="already_registered_sign_in_here">Already registered? Sign in here</string>
    <string name="password_requirement">Password must contain 1 uppercase char and a number and be 6 letters minimum</string>
    <string name="profile_picture">profilepicture</string>
    <string name="network_unavailable_message">Network is unavailable</string>
    <string name="food_information">Food Information "\n"per 100 gram </string>
    <string name="protein_textView">Protein</string>
    <string name="fat_textView">Fat</string>
    <string name="food_name_textView">Food name</string>
    <string name="energyKcal_textView">EnergyKcal</string>
    <string name="sodium_textView">Sodium</string>
    <string name="pick_food_btn_text">Pick food</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="food_btn">Food</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_weight_kg">Enter your weight (kg)</string>
    <string name="enter_your_length">Enter your length</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="save_profile_btn">Save</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="register_btn">Register</string>
    <string name="already_registered_create_user">Already registered? Sign in here!</string>
    <string name="password_login_hint">Password</string>
    <string name="email_login_hint">Email</string>
    <string name="login_btn">Login</string>
    <string name="login_with_facebook_text">Login with facebook</string>
    <string name="no_account_text">No account?</string>
    <string name="register_here_login_btn">Register here</string>
    <string name="show_hide_password">Show</string>
</resources>
