<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fatless.fatless.RegisterTest">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="1080dp"
        android:layout_height="170dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/fatless"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/login_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/login_email_text"
        android:layout_below="@+id/login_email_text"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_view_shape"
        android:ems="10"
        android:hint="@string/password_login_hint"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/login_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_view_shape"
        android:ems="10"
        android:hint="@string/email_login_hint"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignStart="@+id/login_password_text"
        android:layout_marginBottom="21dp"
        android:background="@drawable/button_shape"
        android:fontFamily="sans-serif"
        android:text="@string/login_btn"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/facebook_login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="9dp"
        android:text="@string/login_with_facebook_text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registerButtonMain"
        android:layout_centerHorizontal="true"
        android:text="@string/no_account_text" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_above="@+id/textView4"
        android:layout_alignStart="@+id/login"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="33dp"
        android:elevation="0dp"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/registerButtonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/facebook_login_button"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_shape"
        android:fontFamily="sans-serif"
        android:text="@string/register_here_login_btn"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/show_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_password_text"
        android:layout_alignBottom="@+id/login_password_text"
        android:layout_alignEnd="@+id/login_password_text"
        android:layout_centerInParent="false"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="3dp"
        android:text="@string/show_hide_password"
        android:textStyle="bold" />

</RelativeLayout>
